# llamacpp-proxy

./: README.md  mixtral-template-wo-bos.jinja  pyproject.toml
src/llamacpp_proxy/: main.py
src/llamacpp_proxy/api/: __init__.py  chat.py  completion.py  router.py
src/llamacpp_proxy/config/: __init__.py  rate_limit.py  settings.py  test_rate_limit.py  test_settings.py
src/llamacpp_proxy/middleware/: __init__.py  auth.py  rate_limit.py  test_auth.py  test_rate_limit.py
src/llamacpp_proxy/models/: __init__.py  chat.py  completion.py  test_chat.py  test_completion.py
src/llamacpp_proxy/services/: __init__.py  llama.py  llamacpp.py  template.py  test_llama.py  test_llamacpp.py  test_template.py
