[project]
name = "llamacpp_proxy"
version = "0.1.0"
description = "OpenAI API compatible reverse proxy for llama.cpp server"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "jinja2",
    "python-dotenv",
    "pydantic",
]

[project.scripts]
llamacpp-proxy-server = "llamacpp_proxy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llamacpp_proxy"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "src/llamacpp_proxy",
]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.coverage.run]
source = ["llamacpp_proxy"]
omit = ["*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]